Refactoring in processing